--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}
     helm.sh/chart-version: {{ .Chart.Version }}
   annotations:
-    cert-manager.io/issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: acme
     kubernetes.io/ingress.class: nginx
 spec:
   tls:
