--- a/templates/gitlab/v1.0/assets-pnpm.yml
+++ b/templates/gitlab/v1.0/assets-pnpm.yml
@@ -1,22 +1,9 @@
+include:
+  - https://ci.fwd.tools/gitlab/v1.0/assets-base.yml
+
 .assets:
-  stage: build
-  image: fireworkweb/fwd:1.0-rc
-  services:
-    - docker:dind
-  tags:
-    - dind
-  cache:
-    paths:
-      - node_modules/
+  extends: .assets-base
   before_script:
     - fwd pnpm install --frozen-lockfile
   script:
     - fwd pnpm run production
-  artifacts:
-    paths:
-      - public/js
-      - public/css
-      - public/img
-      - public/mix-manifest.json
-    expire_in: 1 week
-  dependencies: []
