Adding node_modules back to asset articacts

--- a/templates/gitlab/v1.0/assets-base.yml
+++ b/templates/gitlab/v1.0/assets-base.yml
@@ -10,6 +10,7 @@
       - node_modules/
   artifacts:
     paths:
+      - node_modules
       - public/css
       - public/fonts
       - public/img
