--- a/templates/gitlab/v1.0/phpunit.yml
+++ b/templates/gitlab/v1.0/phpunit.yml
@@ -1,7 +1,7 @@
 .phpunit:
   extends: .testing-base
   script:
-    - fwd phpunit --colors=never -vvv
+    - fwd phpunit --colors=never
   artifacts:
     paths:
       - storage/logs
