--- a/templates/gitlab/v1.0/testing-base.yml
+++ b/templates/gitlab/v1.0/testing-base.yml
@@ -7,12 +7,13 @@
     - dind
   before_script:
     - cp $TESTING_ENV_FILE .env
-    - fwd start
+    - fwd start --all
     - fwd artisan migrate:fresh --seed
   after_script:
-    - fwd docker-compose logs http > storage/logs/nginx.log
     - fwd docker-compose logs app > storage/logs/php-fpm.log
+    - fwd docker-compose logs http > storage/logs/nginx.log
     - fwd docker-compose logs database > storage/logs/database.log
     - fwd stop --purge
   dependencies:
+    - assets
     - vendor
