--- a/templates/gitlab/v1.0/k8s.yml
+++ b/templates/gitlab/v1.0/k8s.yml
@@ -1,27 +1,5 @@
-# variables:
-#   DO_TOKEN: ""
-#   DO_K8S: ""
-#   K8S_REGISTRY: ""
-#   K8S_ENV: ""
-#   K8S_ORG: ""
-#   K8S_GROUP: ""
-#   K8S_PROJECT: ""
-#   K8S_HELM_RELEASE: ""
-#   K8S_HELM_REPO: ""
-#   K8S_HELM_VERSION: ""
-#   K8S_HELM_CHART: ""
-#   K8S_HELM_VALUES: ""
-
-.k8s-base:
-  image: fireworkweb/k8s:1.2.1
-  services:
-    - docker:dind
-  tags:
-    - dind
-  before_script:
-    - doctl auth init --access-token=$DO_TOKEN
-    - doctl registry login
-    - doctl kubernetes cluster kubeconfig save $DO_K8S
+include:
+  - https://ci.fwd.tools/gitlab/v1.0/k8s-build.yml
 
 .k8s:
   extends: .k8s-base
@@ -38,21 +16,21 @@
     - vendor
 
 .k8s-build-app:
-  extends: .k8s-base
+  extends: .k8s-build
   stage: build-deploy
-  script:
-    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH -f Dockerfile.app .
-    - docker push $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH
+  variables:
+    K8S_IMAGE_NAME: app
+    K8S_IMAGE_DOCKERFILE: Dockerfile.app
   dependencies:
     - assets
     - vendor
 
 .k8s-build-http:
-  extends: .k8s-base
+  extends: .k8s-build
   stage: build-deploy
-  script:
-    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-http:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-http:$CI_COMMIT_BRANCH -f Dockerfile.http .
-    - docker push $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-http:$CI_COMMIT_BRANCH
+  variables:
+    K8S_IMAGE_NAME: http
+    K8S_IMAGE_DOCKERFILE: Dockerfile.http
   dependencies:
     - assets
     - vendor
