--- a/templates/gitlab/v1.0/k8s-build.yml
+++ b/templates/gitlab/v1.0/k8s-build.yml
@@ -6,6 +6,7 @@
 #   K8S_PROJECT: ""
 #   K8S_IMAGE_NAME: ""
 #   K8S_IMAGE_DOCKERFILE: ""
+#   K8S_IMAGE_DOCKERPATH: ""
 
 include:
   - https://ci.fwd.tools/gitlab/v1.0/k8s-base.yml
@@ -14,6 +15,6 @@ include:
   extends: .k8s-base
   stage: build-deploy
   script:
-    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH -f $K8S_IMAGE_DOCKERFILE .
+    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH -f $K8S_IMAGE_DOCKERFILE $K8S_IMAGE_DOCKERPATH
     - docker push $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH
 
