--- a/templates/gitlab/v1.0/k8s-build.yml
+++ b/templates/gitlab/v1.0/k8s-build.yml
@@ -4,6 +4,7 @@
 #   K8S_GROUP: ""
 #   K8S_PROJECT: ""
 #   K8S_IMAGE_NAME: ""
+#   K8S_IMAGE_DOCKERFLAGS: ""
 #   K8S_IMAGE_DOCKERFILE: ""
 #   K8S_IMAGE_DOCKERPATH: ""
 
@@ -11,6 +12,5 @@
   extends: .k8s-base
   stage: build-deploy
   script:
-    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH -f $K8S_IMAGE_DOCKERFILE $K8S_IMAGE_DOCKERPATH
+    - docker build --cache-from $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-app:$CI_COMMIT_BRANCH --tag $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH $K8S_IMAGE_DOCKERFLAGS -f $K8S_IMAGE_DOCKERFILE $K8S_IMAGE_DOCKERPATH
     - docker push $K8S_REGISTRY/$K8S_ORG-$K8S_GROUP-$K8S_PROJECT-$K8S_IMAGE_NAME:$CI_COMMIT_BRANCH
-
