add --force to helkm upgrade

--- a/templates/gitlab/v1.0/k8s-deploy.yml
+++ b/templates/gitlab/v1.0/k8s-deploy.yml
@@ -13,4 +13,4 @@
   environment: $CI_COMMIT_BRANCH
   stage: deploy
   script:
-    - helm upgrade --install --atomic --namespace=$K8S_ENV-$K8S_ORG-$K8S_GROUP-$K8S_PROJECT --create-namespace $K8S_HELM_RELEASE --repo=$K8S_HELM_REPO --version=$K8S_HELM_VERSION $K8S_HELM_CHART -f $K8S_HELM_VALUES
+    - helm upgrade --install --atomic --force --namespace=$K8S_ENV-$K8S_ORG-$K8S_GROUP-$K8S_PROJECT --create-namespace $K8S_HELM_RELEASE --repo=$K8S_HELM_REPO --version=$K8S_HELM_VERSION $K8S_HELM_CHART -f $K8S_HELM_VALUES
